# abserde

./: .gitignore  .pre-commit-config.yaml  Code-of-Conduct.md  README.md  example.py  pyproject.toml  tox.ini
.github/workflows/: ci.yml  pythonpackage.yml
abserde/: __init__.py  __main__.py  config.py  gen_crate.py  gen_lib.py  main.py  mypy.py
abserde/template_crate/: Cargo.toml.in
abserde/template_crate/src/: lib.rs
docs/source/: conf.py  help.rst  index.rst  install.rst  usage.rst
examples/: forward.pyi  multiclass.pyi  nested.pyi  simple.pyi  twitter.pyi  union.pyi
tests/: test_abserde.py  test_benchmark.py  test_multiclass.py  twitter.json
tests/mypy/: forward.pyi  mypy.ini  test.py
