[tool.poetry]
name = "abserde"
version = "0.1.0"
description = "Generate fast JSON parsers based on type stubs"
authors = ["Ethan Smith <ethan@ethanhs.me>"]
include = ["abserde/template_crate/**/*.*", "abserde/template_crate/src"]
license = "Apache-2.0 OR MIT"

[tool.poetry.dependencies]
python = ">3.6"
click = "^7.0"
pyo3-pack = "^0.5"

[tool.poetry.dev-dependencies]
pytest = "^4.0"
pytest-xdist = "^1.28"
mypy = "0.701"
pre-commit = "^1.16"
tox = "^3.10"

[tool.poetry.plugins."console_scripts"]
"abserde" = "abserde.main:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
