[tool.poetry]
name = "abserde"
version = "0.1.0"
description = "Generate fast JSON parsers based on type stubs"
authors = ["Ethan Smith <ethan@ethanhs.me>"]
include = ["abserde/template_crate/**/*.*", "abserde/template_crate/src"]
license = "Apache-2.0 OR MIT"

[tool.poetry.dependencies]
python = ">3.5"
click = "^7.0"
maturin = "^0.7"
dataclasses = { version = "^0.7", python = "3.6" }

[tool.poetry.dev-dependencies]
pytest = "^4.0"
pytest-benchmark="^3.2"
mypy = "0.761"
pre-commit = "^1.16"
tox = "^3.10"
orjson = "^2.0"
ujson = "1.35"

[tool.poetry.plugins."console_scripts"]
"abserde" = "abserde.main:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
